--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>asdfasdfDocument</title>
 </head>
 <body>
-	
+	asdfasdf
 </body>
 </html>
